app/assets/stylesheets/style_guide.css.scss
/* ... */
.expander {
  position: relative;
}

.user-profile-information-wrapper-right {
  text-align: left;
  display: inline-block;
}

.expander-profile a:hover {
  color: $alt-top-bg-color;
  text-decoration: none;
}


/****************************************
HOMEPAGE LESSON PREVIEWS
****************************************/
.lesson-preview-link {
  text-decoration: none;
}

.lesson-preview-container {
  margin: 6em auto 6em;
  width: 45%;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.lesson-preview-title-container {
  margin-bottom: 0.5em;
  background: #eee;
  box-shadow: 0 2px 5px rgba(0,0,0,0.18);
  padding: .7em .7em .7em .9em;

}

.lesson-preview-title {
  font-size: 1.75em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
  margin-bottom: .3em;
}

// .lesson-preview-subject-container {
//   padding: .5em .5em .5em 1em;
// }
//
// .lesson-preview-subject {
//   font-size: 1.5em;
//   font-family: $headline-font;
//   font-weight: 400;
//   color: #222;
//   margin: .3em .3em .5em 2em;
// }

.lesson-preview-subject-list {
  margin-right: .75em;
  font-size: 1.1em;
}

.lesson-preview-grade-list {
  padding-left: .75em;
  font-size: 1.1em;
}

.lesson-preview-description-container {
  padding: 1em;
}

.lesson-preview-subject-list, .lesson-preview-pipe, .lesson-preview-grade-list,  {
  display: inline;
  font-size: 1em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
}

.lesson-preview-description {
  font-size: 1.1em;
  font-family: $headline-font;
  font-weight: 400;
  color: #222;
  line-height: 1.4em;
}

.star-ranking {
  vertical-align: text-baseline;

}

.icon-star {
  color: yellow;
  font-size: 1.5em;
  display: inline;
}

.ranking {
    display: inline-block;
    position: relative;
    top: 50%;
    transform: translateY(-25%);
    font-family: $headline-font;
    font-size: 1.2em;
    margin-left: .25em;
    color: #555;
    letter-spacing: .1em;
}

.lesson-preview-description {
  line-height: 1.4em;
}

// .lesson-preview-container {
//   margin-bottom: 3em;
//   margin-top: 3em;
// }
/************************************
            SAVE BUTTON
************************************/
.save-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.save-button {
  margin: 0 .5em 0;
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $alt-top-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em .8em 1em;
  text-decoration: none;
  padding: 1em 1.6em 1em;
}

.save-button:hover {
  background: $alt-top-bg-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
            LOG IN BUTTON
************************************/

.login-button-wrapper {
      display: block;
      text-align: center;
      margin: 2em 0 2em;
}

.login-button {
      background-color: $alt-top-bg-color;
      border-radius: .25em;
      color: white;
      font-family: $headline-font;
      font-size: .8em;
      font-weight: bolder;
      text-shadow: none;
      border: none;
      text-align: center;
      padding: 1em 1.6em 1em;
      text-transform: uppercase;
      letter-spacing: .1em;

}

.login-button:hover {
        background-color: $alt-top-bg-hover;
        color: white;
        cursor: pointer;
        text-shadow: none;
        border: none;
        -webkit-transition: .6s;
}


/************************************
            EDIT BUTTON
************************************/
.edit-button-wrapper, .delete-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.edit-button {
  padding: 1em 1.7em 1em;
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $dark-header-color;
  color: #fff;
  border-radius: .25em;
  text-decoration: none;
}

.edit-button:hover {
  background: $dark-header-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
      DELETE  BUTTON
************************************/

.delete-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $button-bg-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em;
  text-decoration: none;
}

.delete-button:hover {
  background: $button-bg-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
      CREATE DOC BUTTON
************************************/
.create-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.create-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $dark-header-color;
  color: #fff;
  border-radius: .25em;
  padding: 1em .5em 1em;
}

.create-button:hover {
  background: $dark-header-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
          UPLOAD BUTTON
************************************/
.upload-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.upload-button {
  padding: 1em 2.7em 1em;
}

.upload-button {
  font-family: $headline-font;
  font-size: .8em;
  font-weight: bolder;
  letter-spacing: .1em;
  text-transform: uppercase;
  border: none;
  background: $alt-top-bg-color;
  color: #fff;
  border-radius: .25em;
}

.upload-button:hover {
  background: $alt-top-bg-hover;
  -webkit-transition: .6s;
  transition: .6s;
  cursor: pointer;
}

/************************************
          UPDATE BUTTON
************************************/
.update-button-wrapper {
  display: block;
  text-align: center;
  margin: 2em 0 2em;
}

.update-button {
  padding: 1em 2.7em 1em;
}
/* ... */

